GDB-8635 fix sparql editor view layout to prevent misalignment of various components
## What
Properly align yasgui components.

## Why
Yasgui container was made position: relative in order to be able to move it slightly up to the page heading so that to look like the other workbench views. This broke the layout in other ways.

## How
Applied positioning outside-in to prevent inner components misalignment.

(cherry picked from commit 0624eef584027f00eb8f01cdfff61d69f116c267)

--- a/src/css/bootstrap-graphdb-theme.css
+++ b/src/css/bootstrap-graphdb-theme.css
@@ -2652,6 +2652,10 @@ yasgui-component .tabsList :last-child:hover {
     color: var(--primary-color) !important;
 }
 
+yasgui-component .tabsList :last-child .addTab {
+    height: 30px;
+}
+
 yasgui-component .tabsList .tab a {
     color: var(--secondary-color) !important;
     font-size: 16px;
